# zkWasm

./: Cargo.toml  bench_bsearch.sh  bench_fibonacci.sh  test_cli.sh
specs/: Cargo.toml
specs/src/: etable.rs  imtable.rs  itable.rs  lib.rs  mtable.rs  types.rs
src/: bench.rs  lib.rs
src/bench/: binary_search.rs  fibonacci.rs  multi_instances.rs  multi_instances_20.rs  sha256.rs  trivial_return.rs
src/circuits/: config.rs  jtable.rs  mod.rs  rtable.rs  shared_columns_pool.rs
src/circuits/etable_compact/: assign.rs  expression.rs  mod.rs
src/circuits/jtable/: configure.rs
src/circuits/mtable_compact/: configure.rs  expression.rs  mod.rs
src/circuits/utils/: bitvalue.rs  bytes8.rs  u8.rs
src/cli/: exec.rs  main.rs  run.rs
src/foreign/sha256_helper/: etable_op_configure.rs  mod.rs  runtime.rs  test.rs
src/foreign/wasm_input_helper/: etable_op_configure.rs  test.rs
src/runtime/: mod.rs  wasmi_interpreter.rs
src/test/: mod.rs  test_binary_search.rs  test_fibonacci.rs  test_fibonacci_v2.rs
src/verifier/: mod.rs  solidity.rs
wasm/: bsearch_200000.wasm  bsearch_500000.wasm  bsearch_64.c  build_bsearch.py  multi_instances.wasm  multi_instances_20.wasm  sha256.wasm  sha256_recalculate_w.wasm
zkwasm/: Cargo.toml
zkwasm-circuit-utils/: Cargo.toml
zkwasm-circuit-utils/src/: lib.rs
zkwasm-circuit-utils/src/cells/: bit_cell.rs  common_range_cell.rs  jtable_lookup_cell.rs  mod.rs  mtable_lookup_cell.rs  offset_len_bits_table_lookup_cell.rs  pow_table_lookup_cell.rs  u4_bop_cell.rs  u64_cell.rs  u64_on_u8_cell.rs  unlimited_cell.rs
zkwasm-circuit-utils/src/columns/: mod.rs
zkwasm-circuit-utils/src/foreign/: foreign_trait.rs  mod.rs
zkwasm-circuit-utils/src/layouter/: context.rs
zkwasm-circuit-utils/src/tables/: mod.rs
zkwasm-circuit-utils/src/tables/etable/: cell_allocator.rs  configure.rs  constraint_builder.rs  expression.rs  mod.rs
zkwasm-circuit-utils/src/tables/etable/configure/: opcode.rs  step_status.rs
zkwasm-circuit-utils/src/tables/etable/foreign/: mod.rs
zkwasm-circuit-utils/src/tables/mtable/: encode.rs  mod.rs
zkwasm-config/: Cargo.toml
zkwasm-config/src/: lib.rs
zkwasm-foreign/zkwasm-foreign-sdk/: Cargo.toml
zkwasm-foreign/zkwasm-foreign-sdk/src/: lib.rs
zkwasm-foreign/zkwasm-foreign-sha256/: Cargo.toml
zkwasm-foreign/zkwasm-foreign-sha256/src/: etable_op_configure.rs  lib.rs  runtime.rs
zkwasm-foreign/zkwasm-foreign-sha256/src/circuits/: assign.rs  config.rs  expr.rs  mod.rs
zkwasm-foreign/zkwasm-foreign-sha256/src/circuits/ops/: ch.rs  lsigma0.rs  lsigma1.rs  maj.rs  ssigma0.rs  ssigma1.rs
zkwasm-types/: Cargo.toml
zkwasm-types/src/: jtable.rs  step.rs  types.rs
zkwasm/src/: lib.rs
zkwasm/src/bench/: sha256.rs
zkwasm/src/circuits/: config.rs  imtable.rs  (+5 more)
(+74 files in other folders)
