[package]
name = "delphinus-zkwasm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cli"
path = "src/cli/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[patch.crates-io]
# This fork makes bitvec 0.20.x work with funty 1.1 and funty 1.2.  Without
# this fork, bitvec 0.20.x is incompatible with funty 1.2, which we depend on,
# and leads to a compilation error.  This can be removed once the upstream PR
# is resolved: https://github.com/bitvecto-rs/bitvec/pull/141
bitvec = { git = "https://github.com/ed255/bitvec.git", rev = "5cfc5fa8496c66872d21905e677120fc3e79693c" }

[dependencies]
ark-std = { version = "0.3.0", features = ["print-trace"] }
downcast-rs = "1.2.0"
halo2_proofs = { path = "../halo2/halo2_proofs", default-features = true }
num-integer = "0.1"
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "0.2.15"
wabt = "0.10.0"
wasmi = { path = "./wasmi" }
lazy_static = "1.4.0"
rand = "0.8.4"
specs = { path = "./specs" }
strum = "0.24.1"
strum_macros = "0.24.1"
wast = "47.0.0"
clap = { version = "3.2.22", features = ["derive","cargo"] }
halo2-snark-aggregator-solidity = { path = "../scroll-halo2-verifier/halo2-snark-aggregator-solidity" }
halo2-snark-aggregator-api = { path = "../scroll-halo2-verifier/halo2-snark-aggregator-api" }
sha3 = "0.10.1"
sha2 ="0.10.2"

#[dev-dependencies]
hex = "0.4.3"
