[package]
name = "zkwasm-circuit-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/junyu0312/halo2", branch = "gpu", default-features = true }
lazy_static = "1.4.0"
num-bigint = { version = "0.4", features = ["rand"] }
zkwasm-config = { path = "../zkwasm-config" }
zkwasm-types = { path = "../zkwasm-types" }

[features]
default = []
cuda = ["halo2_proofs/cuda"]
